--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<title>Document</title>
 	<link rel="stylesheet" href="Exercise.css">
 </head>
+
 <body>
-	
+	<div class="dropdown">
+		<div class="dropdown-select">
+			<span class="select">select item</span>
+			<i class="siabadaba"></i>
+		</div>
+		<div class="dropdown-list">
+			<div class="ćwiczenie">podciąganie</div>
+			<div class="ćwiczenie">pompka</div>
+			<div class="ćwiczenie">przysiad</div>
+		</div>
+	</div>
+	<script src="Exercise.js" type="module"></script>
 </body>
+
 </html>
