--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -15,14 +15,17 @@
 <body>
 	<div class="dropdown">
 		<div class="dropdown-select">
-			<span class="select">select item</span>
-			<i class="siabadaba"></i>
+			<span class="select">wybierz ćwiczenie</span>
+			<!-- <i class="siabadaba"></i> -->
 		</div>
 		<div class="dropdown-list">
-			<div class="ćwiczenie">podciąganie</div>
-			<div class="ćwiczenie">pompka</div>
-			<div class="ćwiczenie">przysiad</div>
+			<div class="ćwiczenie1">podciąganie<br></div>
+			<div class="ćwiczenie2">pompka<br></div>
+			<div class="ćwiczenie3">przysiad<br></div>
 		</div>
+		<div class="kalku">siabadabada</div>
+		<div class="licznik"> xxxxxxxxxxx</div>
+
 	</div>
 	<script src="Exercise.js" type="module"></script>
 </body>
