--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -23,10 +23,12 @@
 			<div class="ćwiczenie2">pompka<br></div>
 			<div class="ćwiczenie3">przysiad<br></div>
 		</div>
-		<div class="kalku">siabadabada</div>
-		<div class="licznik"> xxxxxxxxxxx</div>
-
 	</div>
+
+	<div class="kalku">yyyyyyyyyy
+		<span class="kalku-licznik"> xxxxxxxxxxx</span>
+	</div>
+
 	<script src="Exercise.js" type="module"></script>
 </body>
 
