--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -19,9 +19,9 @@
 			<!-- <i class="siabadaba"></i> -->
 		</div>
 		<div class="dropdown-list">
-			<div class="ćwiczenie1">podciąganie<br></div>
-			<div class="ćwiczenie2">pompka<br></div>
-			<div class="ćwiczenie3">przysiad<br></div>
+			<div class="exercise">podciąganie<br></div>
+			<div class="exercise">pompka<br></div>
+			<div class="exercise">przysiad<br></div>
 		</div>
 	</div>
 
