--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -19,9 +19,9 @@
 			<!-- <i class="siabadaba"></i> -->
 		</div>
 		<div class="dropdown-list">
-			<div class="exercise">podciąganie<br></div>
-			<div class="exercise">pompka<br></div>
-			<div class="exercise">przysiad<br></div>
+			<a1 href ="exercise">podciąganie<br></a1>
+			<a2 href="exercise">pompka<br></a2>
+			<a3 href= ="exercise">przysiad<br></a3>></div>
 		</div>
 	</div>
 
