--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<title>Document</title>
 	<link rel="stylesheet" href="Exercise.css">
+	<script src="jquery.js"></script>
 </head>
 
 <body>
@@ -19,13 +20,13 @@
 			<!-- <i class="siabadaba"></i> -->
 		</div>
 		<div class="dropdown-list">
-			<a1 href ="exercise">podciąganie<br></a1>
-			<a2 href="exercise">pompka<br></a2>
-			<a3 href= ="exercise">przysiad<br></a3>></div>
+			<a href="#kalku">podciąganie<br></a>
+			<a href="#exercise">pompka<br></a>
+			<a href="#exercise">przysiad<br></a>
 		</div>
 	</div>
 
-	<div class="kalku">yyyyyyyyyy
+	<div id="kalku" class="kalku">yyyyyyyyyy
 		<span class="kalku-licznik"> xxxxxxxxxxx</span>
 	</div>
 
