--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -20,10 +20,15 @@
 			<!-- <i class="siabadaba"></i> -->
 		</div>
 		<div class="dropdown-list">
-			<a href="#kalku">podciąganie<br></a>
-			<a href="#exercise">pompka<br></a>
-			<a href="#exercise">przysiad<br></a>
+			<a data-href="#kalku">podciąganie<br></a>
+			<a data-href="#pompka">pompka<br></a>
+			<a data-href="#kalku">przysiad<br></a>
 		</div>
+	</div>
+	
+
+	<div id="pompka" class="kalku">eeeeeeeeee
+		<span class="kalku-licznik"> xxxxxxxxxxx</span>
 	</div>
 
 	<div id="kalku" class="kalku">yyyyyyyyyy
