--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -27,13 +27,18 @@
 	</div>
 	
 
-	<div id="pompka" class="kalku">eeeeeeeeee
-		<span class="kalku-licznik"> xxxxxxxxxxx</span>
-	</div>
+
 
 	<div id="kalku" class="kalku">yyyyyyyyyy
 		<span class="kalku-licznik"> xxxxxxxxxxx</span>
+	</div>	
+	<div id="pompka" class="kalku">eeeeeeeeee
+		<span class="kalku-licznik"> xxxxxxxxxxx</span>
 	</div>
+	<div id="przysiad" class="kalku">mmmmmmmmm
+		<span class="kalku-licznik"> xxxxxxxxxxx</span>
+	</div>
+
 
 	<script src="Exercise.js" type="module"></script>
 </body>
