--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -17,7 +17,7 @@
 	<div class="dropdown">
 		<div class="dropdown-select">
 			<span class="select">wybierz ćwiczenie</span>
-			<!-- <i class="siabadaba"></i> -->
+
 		</div>
 		<div class="dropdown-list">
 			<a data-href="#kalku">podciąganie<br></a>
@@ -30,13 +30,13 @@
 
 
 	<div id="kalku" class="kalku">yyyyyyyyyy
-		<span class="kalku-licznik"> xxxxxxxxxxx</span>
+		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
 	</div>	
 	<div id="pompka" class="kalku">eeeeeeeeee
-		<span class="kalku-licznik"> xxxxxxxxxxx</span>
+		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
 	</div>
 	<div id="przysiad" class="kalku">mmmmmmmmm
-		<span class="kalku-licznik"> xxxxxxxxxxx</span>
+		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
 	</div>
 
 
