--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -30,13 +30,13 @@
 
 
 	<div id="kalku" class="kalku">yyyyyyyyyy
-		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
+		<span class="kalku-licznik"> podciąggggg</span>
 	</div>	
 	<div id="pompka" class="kalku">eeeeeeeeee
-		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
+		<span class="kalku-licznik"> pompkaaaaa</span>
 	</div>
-	<div id="przysiad" class="kalku">mmmmmmmmm
-		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
+	<div id="przysiad" class="kalku">mmmmmmmm
+		<span class ="kalku-licznik"> przysiadddd</span>
 	</div>
 
 
