--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -20,7 +20,7 @@
 			<!-- <i class="siabadaba"></i> -->
 		</div>
 		<div class="dropdown-list">
-			<a data-href="#kalku">podciąganie<br></a>
+			<a data-href="#pull-up">podciąganie<br></a>
 			<a data-href="#pompka">pompka<br></a>
 			<a data-href="#kalku">przysiad<br></a>
 		</div>
