--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -27,47 +27,21 @@
 	</div>
 	
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-
 	<div id="kalku" class="kalku">yyyyyyyyyy
 		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
+		<span class="kalku-licznik"> podciąggggg</span>
 	</div>	
-=======
->>>>>>> parent of 701ec5b (yyyyyyyyyy)
-=======
->>>>>>> parent of 701ec5b (yyyyyyyyyy)
-=======
->>>>>>> parent of 701ec5b (yyyyyyyyyy)
 	<div id="pompka" class="kalku">eeeeeeeeee
 		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
+		<span class="kalku-licznik"> pompkaaaaa</span>
 	</div>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 	<div id="przysiad" class="kalku">mmmmmmmmm
 		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
-=======
-
-	<div id="kalku" class="kalku">yyyyyyyyyy
-		<span class="kalku-licznik"> xxxxxxxxxxx</span>
->>>>>>> parent of 701ec5b (yyyyyyyyyy)
+	<div id="przysiad" class="kalku">mmmmmmmm
+		<span class ="kalku-licznik"> przysiadddd</span>
 	</div>
 
-=======
-=======
->>>>>>> parent of 701ec5b (yyyyyyyyyy)
 
-	<div id="kalku" class="kalku">yyyyyyyyyy
-		<span class="kalku-licznik"> xxxxxxxxxxx</span>
-	</div>
-
-<<<<<<< HEAD
->>>>>>> parent of 701ec5b (yyyyyyyyyy)
-=======
->>>>>>> parent of 701ec5b (yyyyyyyyyy)
 	<script src="Exercise.js" type="module"></script>
 </body>
 
