--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -20,24 +20,22 @@
 
 		</div>
 		<div class="dropdown-list">
-			<a data-href="#pull-up">podciąganie<br></a>
-			<a data-href="#pompka">pompka<br></a>
+			<a data-href="#kalku">podciąganie<br></a>
+			<a data-href="#push">pompka<br></a>
 			<a data-href="#kalku">przysiad<br></a>
 		</div>
 	</div>
 	
 
 	<div id="kalku" class="kalku">yyyyyyyyyy
-		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
-		<span class="kalku-licznik"> podciąggggg</span>
+		<div class="kalku-licznik"> podciąggggg</div>
 	</div>	
-	<div id="pompka" class="kalku">eeeeeeeeee
-		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
+
+	<div id="pompka" class="push">eeeeeeeeee
 		<span class="kalku-licznik"> pompkaaaaa</span>
 	</div>
+
 	<div id="przysiad" class="kalku">mmmmmmmmm
-		<data-span ="#kalku-licznik"> xxxxxxxxxxx</span>
-	<div id="przysiad" class="kalku">mmmmmmmm
 		<span class ="kalku-licznik"> przysiadddd</span>
 	</div>
 
