--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -21,22 +21,28 @@
 		</div>
 		<div class="dropdown-list">
 			<a data-href="#kalku">podciąganie<br></a>
-			<a data-href="#push">pompka<br></a>
+			<a data-href="#kalku">pompka<br></a>
 			<a data-href="#kalku">przysiad<br></a>
 		</div>
 	</div>
-	
+
 
 	<div id="kalku" class="kalku">yyyyyyyyyy
-		<div class="kalku-licznik"> podciąggggg</div>
-	</div>	
 
-	<div id="pompka" class="push">eeeeeeeeee
-		<span class="kalku-licznik"> pompkaaaaa</span>
-	</div>
+		<div class="pullup"> podciąggggg
 
-	<div id="przysiad" class="kalku">mmmmmmmmm
-		<span class ="kalku-licznik"> przysiadddd</span>
+			<div id="number">0</div>
+
+			<button id="increment">+</button><button id="decrement">-</button><br>
+			<button id="done">DONE</button><button id="sets">Your set:</button>
+
+
+		</div>
+
+		<div id="pompka" class="kalku-licznik">podcągggg </div>
+
+		<div id="przysiad" class="kalku">mmmmmmmmm</div>
+
 	</div>
 
 
