--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -34,7 +34,7 @@
 			<div id="number">0</div>
 
 			<button id="increment">+</button><button id="decrement">-</button><br>
-			<button id="done">DONE</button><button id="sets">Your set:</button>
+			<button onclick="dodaj()" id="done">DONE</button><button id="sets">Your set:</button>
 
 
 		</div>
