--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&display=swap" rel="stylesheet">
 	<title>Document</title>
 	<link rel="stylesheet" href="Exercise.css">
 	<script src="jquery.js"></script>
@@ -27,14 +27,17 @@
 	</div>
 
 
-	<div id="kalku" class="kalku">yyyyyyyyyy
+	<div id="kalku" class="kalku">
 
-		<div class="pullup"> podciąggggg
-
+		<div class="pullup"> 
+			<Div class="pull-up">PULL-UP<br>
+				<img src="images/pullup.png"  width="50" height="33">
+			</Div>
+			
 			<div id="number">0</div>
 
 			<button id="increment">+</button><button id="decrement">-</button><br>
-			<button onclick="dodaj()" id="done">DONE</button><button id="sets">Your set:</button>
+			<button  id="done">DONE</button><button id="sets">Your set:</button>
 
 
 		</div>
