--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -29,24 +29,28 @@
 
 	<div id="kalku" class="kalku">
 
-		<div class="pullup"> 
+		<div class="pullup">
 			<Div class="pull-up">PULL-UP<br>
-				<img src="images/pullup.png"  width="50" height="33">
+				<img src="images/pullup.png" width="50" height="33">
 			</Div>
-			
-			<div id="number">0</div>
+		</div>
+		<div class="numery">
+			<div id="number">0</div><br>
 
 			<button id="increment">+</button><button id="decrement">-</button><br>
-			<button  id="done">DONE</button><button id="sets">Your set:</button>
-
-
+		</div>
+		<div class="block">
+			<button id="done">DONE</button><button id="sets">Your set:</button>
 		</div>
 
-		<div id="pompka" class="kalku-licznik">podcągggg </div>
+		<!-- <div id="pompka" class="kalku-licznik">podcągggg </div> -->
+
 
 		<div id="przysiad" class="kalku">mmmmmmmmm</div>
-
 	</div>
+
+
+
 
 
 	<script src="Exercise.js" type="module"></script>
