--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -43,7 +43,7 @@
 			<button id="done">DONE</button><button id="sets">Your set:</button>
 		</div>
 
-		<!-- <div id="pompka" class="kalku-licznik">podcągggg </div> -->
+		<div id="pompka" class="kalku-licznik">podcągggg </div>
 
 
 		<div id="przysiad" class="kalku">mmmmmmmmm</div>
