--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -43,10 +43,45 @@
 			<button id="done">DONE</button><button id="sets">Your set:</button>
 		</div>
 
-		<div id="pompka" class="kalku-licznik">podcągggg </div>
 
 
-		<div id="przysiad" class="kalku">mmmmmmmmm</div>
+
+		<div class="pompka">
+			<div class="push-up">PUSH-UP<br>
+				<img src="images/push-up.png" width="50" height="33">
+			</div>
+		</div>
+		<div class="numery">
+			<div id="number">0</div><br>
+
+			<button id="increment">+</button><button id="decrement">-</button><br>
+		</div>
+		<div class="block">
+			<button id="done">DONE</button><button id="sets">Your set:</button>
+		</div>
+	
+
+
+
+
+
+
+		<!-- <div class="przysiad">
+			<div class="squat">SQUAT<br>
+				<img src="images/squat.png" width="50" height="33">
+			</div>
+		</div>
+		<div class="numery">
+			<div id="number">0</div><br>
+
+			<button id="increment">+</button><button id="decrement">-</button><br>
+		</div>
+		<div class="block">
+			<button id="done">DONE</button><button id="sets">Your set:</button>
+		</div> -->
+
+
+
 	</div>
 
 
