--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -26,63 +26,67 @@
 		</div>
 	</div>
 
-
-	<div id="kalku" class="kalku">
-
-		<div class="pullup">
-			<Div class="pull-up">PULL-UP<br>
-				<img src="images/pullup.png" width="50" height="33">
-			</Div>
-		</div>
-		<div class="numery">
-			<div id="number">0</div><br>
-
-			<button id="increment">+</button><button id="decrement">-</button><br>
-		</div>
-		<div class="block">
-			<button id="done">DONE</button><button id="sets">Your set:</button>
-		</div>
+	<div class="kalku1">
+		<div id="kalku" class="kalku">
 
 
-
-
-		<div class="pompka">
-			<div class="push-up">PUSH-UP<br>
-				<img src="images/push-up.png" width="50" height="33">
+			<div class="pullup">
+				<Div class="pull-up">PULL-UP<br>
+					<img src="images/pullup.png" width="50" height="33">
+				</Div>
 			</div>
-		</div>
-		<div class="numery">
-			<div id="number">0</div><br>
+			<div class="numery">
+				<div id="number">0</div><br>
 
-			<button id="increment">+</button><button id="decrement">-</button><br>
-		</div>
-		<div class="block">
-			<button id="done">DONE</button><button id="sets">Your set:</button>
-		</div>
-	
-
-
-
-
-
-
-		<!-- <div class="przysiad">
-			<div class="squat">SQUAT<br>
-				<img src="images/squat.png" width="50" height="33">
+				<button id="increment">+</button><button id="decrement">-</button><br>
 			</div>
+			<div class="block">
+				<button id="done">DONE</button><button id="sets">Your set:</button>
+			</div>
+
+
 		</div>
-		<div class="numery">
-			<div id="number">0</div><br>
-
-			<button id="increment">+</button><button id="decrement">-</button><br>
-		</div>
-		<div class="block">
-			<button id="done">DONE</button><button id="sets">Your set:</button>
-		</div> -->
-
-
-
 	</div>
+
+	<div class="kalku2">
+		<div id="kalku" class="kalku">
+			<div class="pompka">
+				<div class="push-up">PUSH-UP<br>
+					<img src="images/push-up.png" width="50" height="33">
+				</div>
+			</div>
+			<div class="numery">
+				<div id="number">0</div><br>
+
+				<button id="increment">+</button><button id="decrement">-</button><br>
+			</div>
+			<div class="block">
+				<button id="done">DONE</button><button id="sets">Your set:</button>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="kalku3">
+		<div id="kalku" class="kalku">
+			<div class="przysiad">
+				<div class="squat">SQUAT<br>
+					<img src="images/squat.png" width="50" height="33">
+				</div>
+			</div>
+			<div class="numery">
+				<div id="number">0</div><br>
+
+				<button id="increment">+</button><button id="decrement">-</button><br>
+			</div>
+			<div class="block">
+				<button id="done">DONE</button><button id="sets">Your set:</button>
+			</div>
+		</div>
+	</div>
+
+
+
 
 
 
