--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -20,9 +20,9 @@
 
 		</div>
 		<div class="dropdown-list">
-			<a data-href="#kalku">podciąganie<br></a>
-			<a data-href="#kalku">pompka<br></a>
-			<a data-href="#kalku">przysiad<br></a>
+			<a data-href="#kalku1">podciąganie<br></a>
+			<a data-href="#kalku2">pompka<br></a>
+			<a data-href="#kalku3">przysiad<br></a>
 		</div>
 	</div>
 
