--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -56,7 +56,7 @@
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
 		<div class="block">
-			<button id="done">DONE</button><button id="sets">Your set:</button>
+			<button id="done">DONE</button><button id="sets2">Your set:</button>
 		</div>
 	</div>
 
@@ -73,7 +73,7 @@
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
 		<div class="block">
-			<button id="done">DONE</button><button id="sets">Your set:</button>
+			<button id="done">DONE</button><button id="sets3">Your set:</button>
 		</div>
 	</div>
 
