--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -38,7 +38,8 @@
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
 		<div class="block">
-			<button id="done">DONE</button><button id="sets">Your set:</button>
+			<button id="done">DONE</button><button id="sets">Your set:</button><br>
+			<button id="reset">RESET</button>
 		</div>
 
 
