--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -57,7 +57,8 @@
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
 		<div class="block">
-			<button id="done">DONE</button><button id="sets2">Your set:</button>
+			<button id="done">DONE</button><button id="sets2">Your set:</button><br>
+			<button id="reset">RESET</button>
 		</div>
 	</div>
 
@@ -74,7 +75,8 @@
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
 		<div class="block">
-			<button id="done">DONE</button><button id="sets3">Your set:</button>
+			<button id="done">DONE</button><button id="sets3">Your set:</button><br>
+			<button id="reset">RESET</button>
 		</div>
 	</div>
 
