--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -23,6 +23,8 @@
 			<a data-href="#kalku1">podciąganie</a>
 			<a data-href="#kalku2">pompka</a>
 			<a data-href="#kalku3">przysiad</a>
+			<a data-href="#additional">dodaj ćwiczenie</a>
+
 		</div>
 	</div>
 
@@ -33,7 +35,7 @@
 			</Div>
 		</div>
 		<div class="numery">
-			<div id="number">0</div><br>
+			<div class="number">0</div><br>
 
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
@@ -52,7 +54,7 @@
 			</div>
 		</div>
 		<div class="numery">
-			<div id="number">0</div><br>
+			<div class="number">0</div><br>
 
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
@@ -70,7 +72,7 @@
 			</div>
 		</div>
 		<div class="numery">
-			<div id="number">0</div><br>
+			<div class="number">0</div><br>
 
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
@@ -80,6 +82,31 @@
 		</div>
 	</div>
 
+	<div id="kalku4" class="kalku">
+		<div class="dodaj">
+			<div id="other">other<br>
+				<img src="images/cwiczenie.png" width="50" height="33">
+			</div>
+		</div>
+		<div class="numery">
+			<div class="number">0</div><br>
+
+			<button id="increment">+</button><button id="decrement">-</button><br>
+		</div>
+		<div class="block">
+			<button id="done">DONE</button><button id="sets4">Your set:</button><br>
+			<button id="reset">RESET</button>
+		</div>
+	</div>
+
+	<!-- //////////////////////////////////////////////////////////////////////////////
+	other
+	/////////////////////////////////////////////////////////////////////////// -->
+	<div id="additional" class="kalku">
+		<label>exercise:</label>
+		<input type="text" id="addexercise"></input>
+		<button type="button" id="add">add</button>
+	</div>
 
 
 
