--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -84,7 +84,7 @@
 
 	<div id="kalku4" class="kalku">
 		<div class="dodaj">
-			<div id="other">other<br>
+			<div class="other">other<br>
 				<img src="images/cwiczenie.png" width="50" height="33">
 			</div>
 		</div>
