--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -23,6 +23,7 @@
 			<a data-href="#kalku1">podciąganie</a>
 			<a data-href="#kalku2">pompka</a>
 			<a data-href="#kalku3">przysiad</a>
+			<a data-href="#kalku4">Pokaż other</a>
 			<a data-href="#additional">dodaj ćwiczenie</a>
 
 		</div>
