--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+	<div id="content"></div>
+
 	<div class="dropdown">
 		<div class="dropdown-select">
 			<span class="select">wybierz ćwiczenie</span>
@@ -23,8 +25,8 @@
 			<a data-href="#kalku1">podciąganie</a>
 			<a data-href="#kalku2">pompka</a>
 			<a data-href="#kalku3">przysiad</a>
-			<a data-href="#kalku4">Pokaż other</a>
-			<a data-href="#additional">dodaj ćwiczenie</a>
+			<!-- <a data-href="#kalku4">Pokaż other</a> -->
+			<a data-href="#content">dodaj ćwiczenie</a>
 
 		</div>
 	</div>
