--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<div id="content"></div>
+	
 
 	<div class="dropdown">
 		<div class="dropdown-select">
@@ -26,7 +26,7 @@
 			<a data-href="#kalku2">pompka</a>
 			<a data-href="#kalku3">przysiad</a>
 			<!-- <a data-href="#kalku4">Pokaż other</a> -->
-			<a data-href="#content">dodaj ćwiczenie</a>
+			<a class="play"  data-href="#content">dodaj ćwiczenie</a>
 
 		</div>
 	</div>
@@ -115,7 +115,7 @@
 
 
 
-
+	<div id="content"></div>
 
 	<script src="Exercise.js" type="module"></script>
 </body>
