--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -25,7 +25,7 @@
 			<a data-href="#kalku1">podciąganie</a>
 			<a data-href="#kalku2">pompka</a>
 			<a data-href="#kalku3">przysiad</a>
-			<!-- <a data-href="#kalku4">Pokaż other</a> -->
+			<a data-href="#kalku4"></a>
 			<a class="play"  data-href="#content">dodaj ćwiczenie</a>
 
 		</div>
@@ -101,17 +101,6 @@
 			<button id="reset">RESET</button>
 		</div>
 	</div>
-
-	<!-- //////////////////////////////////////////////////////////////////////////////
-	other
-	/////////////////////////////////////////////////////////////////////////// -->
-	<div id="additional" class="kalku">
-		<label>exercise:</label>
-		<input type="text" id="addexercise"></input>
-		<button type="button" id="add">add</button>
-	</div>
-
-
 
 
 
