--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -87,16 +87,15 @@
 
 	<div id="kalku4" class="kalku">
 		<div class="dodaj">
-			<div class="other">other<br>
-				<img src="images/cwiczenie.png" width="50" height="33">
-			</div>
+			<div class="other">other<br></div>
+			<img src="images/cwiczenie.png" width="50" height="33">
 		</div>
-		<div class="numery">
+		<div class="numery" >
 			<div class="number">0</div><br>
 
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
-		<div class="block">
+		<div class="block" id="blockx">
 			<button id="done">DONE</button><button id="sets4">Your set:</button><br>
 			<button id="reset">RESET</button>
 		</div>
