--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -103,7 +103,12 @@
 
 
 
+	<div id="stat">
+		<button>STATISTIC</button>
+	</div>
+
 	<div id="content"></div>
+	<div id="statistic"></div>
 
 	<script src="Exercise.js" type="module"></script>
 </body>
