--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -26,7 +26,7 @@
 			<a data-href="#kalku2">pompka</a>
 			<a data-href="#kalku3">przysiad</a>
 
-			<a class="put"  data-href="#kalku4">show 4</a>
+			<a class="put"  data-href="#kalku4"></a>
 			<a class="play" data-href="#content">dodaj ćwiczenie</a>
 
 		</div>
@@ -104,12 +104,12 @@
 
 	<div id="content"></div>
 
-	<div id="stat">
+	<!-- <div id="stat">
 		<button>STATISTIC</button>
 	</div>
 
 
-	<div id="statistic"></div>
+	<div id="statistic"></div> -->
 
 	<script src="Exercise.js" type="module"></script>
 </body>
