--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -104,12 +104,12 @@
 
 	<div id="content"></div>
 
-	<!-- <div id="stat">
+	<div id="stat">
 		<button>STATISTIC</button>
 	</div>
 
 
-	<div id="statistic"></div> -->
+	<div id="statistic"></div>
 
 	<script src="Exercise.js" type="module"></script>
 </body>
