--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -105,7 +105,7 @@
 	<div id="content"></div>
 
 	<div id="stat">
-		<button>STATISTIC</button>
+		<button id="statbut">STATISTIC</button>
 	</div>
 
 
