--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -101,7 +101,7 @@
 			<button id="reset">RESET</button>
 		</div>
 	</div>
-
+    <div id="statistic">apapappapa</div>
 	<div id="content"></div>
 
 	<div id="stat">
@@ -109,7 +109,7 @@
 	</div>
 
 
-	<div id="statistic"></div>
+	
 
 	<script src="Exercise.js" type="module"></script>
 </body>
