--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -22,7 +22,7 @@
 
 		</div>
 		<div class="dropdown-list">
-			<a data-href="#kalku1">podciąganie</a>
+			<a id="kal1" data-href="#kalku1">podciąganie</a>
 			<a data-href="#kalku2">pompka</a>
 			<a data-href="#kalku3">przysiad</a>
 
