--- a/Exercise/Exercise.html
+++ b/Exercise/Exercise.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Gluten:wght@500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@1&display=swap" rel="stylesheet">
 	<title>Document</title>
 	<link rel="stylesheet" href="Exercise.css">
 	<script src="jquery.js"></script>
@@ -44,7 +44,8 @@
 			<button id="increment">+</button><button id="decrement">-</button><br>
 		</div>
 		<div class="block">
-			<button id="done">DONE</button><button id="sets">Your set:</button><br>
+			<button id="done">DONE</button>
+			<button id="sets">Your set:</button><br>
 			<button id="reset">RESET</button>
 		</div>
 
